Changed admin container to flex container to fix inconsistencies on mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1084,12 +1084,10 @@ input[type='radio'] {
 }
 
 .admin-container {
-  padding: 4em 2em 2em 2em;
-  background-color: #f1f1f1;
-}
-
-.admin-section {
+  display: flex;
+  flex-direction: column;
   margin: 3em 0;
+  background-color: #f1f1f1;
 }
 
 .quick-stats {
